TestSuite/errors/err0310.pas
begin
  var s := [1..'d'];
end.